<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp">


    <ImageButton
        android:id="@+id/btn_heart"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/xmlid_1114"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_promo"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favs"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="#7e7e7e"
        app:layout_constraintTop_toBottomOf="@id/btn_heart"
        app:layout_constraintLeft_toLeftOf="@id/btn_heart"
        app:layout_constraintRight_toRightOf="@id/btn_heart"/>
    <ImageButton
        android:id="@+id/btn_promo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/union"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_heart"
        app:layout_constraintRight_toLeftOf="@id/btn_trends"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promos"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="#7e7e7e"
        app:layout_constraintTop_toBottomOf="@id/btn_promo"
        app:layout_constraintLeft_toLeftOf="@id/btn_promo"
        app:layout_constraintRight_toRightOf="@id/btn_promo"/>
    <ImageButton
        android:id="@+id/btn_trends"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/trending_up"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_promo"
        app:layout_constraintRight_toLeftOf="@id/btn_more"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trends"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="#7e7e7e"
        app:layout_constraintTop_toBottomOf="@id/btn_trends"
        app:layout_constraintLeft_toLeftOf="@id/btn_trends"
        app:layout_constraintRight_toRightOf="@id/btn_trends"/>
    <ImageButton
        android:id="@+id/btn_more"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/dots_24px"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_trends"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="#7e7e7e"
        app:layout_constraintTop_toBottomOf="@id/btn_more"
        app:layout_constraintLeft_toLeftOf="@id/btn_more"
        app:layout_constraintRight_toRightOf="@id/btn_more"/>

</androidx.constraintlayout.widget.ConstraintLayout>