<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activitys.ActivityLogin"
    >

    <View
        android:id="@+id/view_login"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:background="@color/buttomColour"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/buttomColour"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/text_bt_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintLeft_toRightOf="@id/btn_atras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_login"
        />

       <RelativeLayout
           android:id="@+id/relative_1"
           android:layout_width="180dp"
           android:layout_height="180dp"
           android:orientation="vertical"
           app:layout_constraintRight_toRightOf="@+id/edit_Password"
           app:layout_constraintLeft_toLeftOf="@id/edit_Password"
           app:layout_constraintTop_toBottomOf="@id/view_login"
           app:layout_constraintBottom_toTopOf="@+id/edit_Password"
           android:background="@drawable/iconostart">

           <ImageView
               android:id="@+id/icon_2_login"
               android:layout_width="115dp"
               android:layout_height="110dp"
               android:layout_alignParentLeft="true"
               android:layout_alignParentTop="true"
               android:layout_marginLeft="0dp"
               android:layout_marginTop="4dp"
               app:srcCompat="@drawable/imglogin1" />

           <ImageView
               android:id="@+id/icon_1_login"
               android:layout_width="111dp"
               android:layout_height="111dp"
               android:layout_alignParentBottom="true"
               android:layout_alignParentRight="true"
               app:srcCompat="@drawable/imglogin2" />

       </RelativeLayout>

    <View
        android:id="@+id/view_bt_login"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
       />

    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@id/view_bt_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/poppins"
        android:background="@drawable/bordertext"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginBottom="64dp"
        />


    <EditText
        android:id="@+id/edit_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@+id/edit_Password"
        app:layout_constraintRight_toRightOf="@+id/edit_Password"
        app:layout_constraintLeft_toLeftOf="@+id/edit_Password"
        android:background="@drawable/bordertext"
        android:hint="@string/edt_username"
        android:inputType="text"
        android:text="@string/usernamelogin"
        android:textColor="@color/black"
        android:layout_marginBottom="32dp"
        android:autofillHints=""/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/buttomColour"
        android:text="@string/bt_login"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/edit_Password"
        app:layout_constraintRight_toRightOf="@+id/edit_Password" />




</androidx.constraintlayout.widget.ConstraintLayout>