<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activitys.ActivitySignUp">

    <View
        android:id="@+id/view_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:background="@color/buttomColour"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/buttomColour"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/text_bt_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintLeft_toRightOf="@id/btnAtras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_sing_up"
        />

    <EditText
        android:id="@+id/edit_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        android:hint="Name"
        android:inputType="text"
        android:textColor="@color/colourSubTittle"
        app:layout_constraintBottom_toTopOf="@id/edit_text_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_sing_up"
        android:textSize="14sp"
        android:background="@drawable/bordertext"/>

    <EditText
        android:id="@+id/edit_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@id/edit_text_3"
        app:layout_constraintRight_toRightOf="@id/edit_text_1"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_1"
        app:layout_constraintTop_toBottomOf="@id/edit_text_1"
        android:background="@drawable/bordertext"
        android:hint="Surname"
        android:inputType="text"
        android:textColor="@color/colourSubTittle"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/edit_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@id/edit_text_4"
        app:layout_constraintRight_toRightOf="@id/edit_text_2"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_2"
        app:layout_constraintTop_toBottomOf="@id/edit_text_2"
        android:background="@drawable/bordertext"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/colourSubTittle"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/edit_text_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@id/edit_text_5"
        app:layout_constraintRight_toRightOf="@id/edit_text_3"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_3"
        app:layout_constraintTop_toBottomOf="@id/edit_text_3"
        android:background="@drawable/bordertext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colourSubTittle"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/edit_text_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@id/edit_text_6"
        app:layout_constraintRight_toRightOf="@id/edit_text_4"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_4"
        app:layout_constraintTop_toBottomOf="@id/edit_text_4"
        android:background="@drawable/bordertext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colourSubTittle"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/edit_text_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@id/text_terms_condition"
        app:layout_constraintRight_toRightOf="@id/edit_text_5"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_5"
        app:layout_constraintTop_toBottomOf="@id/edit_text_5"
        android:background="@drawable/bordertext"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/colourSubTittle"
        android:layout_marginBottom="35dp"
        android:textSize="14sp"

        />

    <TextView
        android:id="@+id/text_terms_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:fontFamily="@font/poppins"
        android:text="I agree with the Terms &amp; \n Conditions "
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bt_sing_up"
        app:layout_constraintLeft_toLeftOf="@id/bt_sing_up" />

    <CheckBox
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@color/colourSubTittle"
        app:layout_constraintRight_toRightOf="@id/bt_sing_up"
        app:layout_constraintBottom_toBottomOf="@id/bt_sing_up"
        app:layout_constraintTop_toBottomOf="@id/edit_text_6"        />

    <Button
        android:id="@+id/bt_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/edit_text_6"
        app:layout_constraintLeft_toLeftOf="@id/edit_text_6"
        android:layout_marginBottom="52dp"
        android:text="Sign up"
        android:fontFamily="@font/poppins_bold"
        android:backgroundTint="@color/buttomColour"/>

</androidx.constraintlayout.widget.ConstraintLayout>